fixed ghosting bug on firefox

--- a/base/style/PropControls/PropControlCode.less
+++ b/base/style/PropControls/PropControlCode.less
@@ -19,6 +19,7 @@
 			background-color: transparent !important;
 			color: transparent !important;
 			caret-color: white;
+			text-shadow: none !important;
 		}
 
 		// Highlighting overlay
